Fix main blue to have reasonable contrast ratio on gray backgrounds

--- a/src/client/assets/sass/_colors.sass
+++ b/src/client/assets/sass/_colors.sass
@@ -52,4 +52,4 @@ $color-blue-de-france-approx: #3397DB // Blue
 $color-picton-blue-approx: #44BDE6    // Medium Blue
 $color-pale-cerulean-approx: #95C3E3  // Light Blue 2
 $color-polar-approx: #E2F5F6          // Light Blue
-$color-palatinate-blue: #3374db    // Dark Blue
+$color-palatinate-blue: #2464CC    // Dark Blue
